# VORA-Recon

./: .gitignore  Cargo.toml  Convert-Logo.ps1  EULA.txt  Optimize-Vora.ps1  README.md  VoraPerformance.reg  build.rs  installer.nsi  laptopbraille.txt  stderr.txt
src/: capture.rs  dhcp.rs  dhcp_probe.rs  discovery.rs  display.rs  geoip.rs  logger.rs  main.rs  oui.rs  packet.rs  process.rs
tauri-app/: package-lock.json
tauri-app/src/: index.html  main.js
tauri-app/src-tauri/: build.rs  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
