[package]
name = "vora-recon"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "launcher"
path = "src/bin/launcher.rs"

[[bin]]
name = "vora-recon"
path = "src/main.rs"

[dependencies]
pnet = "0.35"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
ureq = { version = "2.9", features = ["json"] }
unicode-truncate = "1"
unicode-width = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "wincon", "winuser", "shellapi", "consoleapi",
    "iphlpapi", "tcpmib", "udpmib",
    "processthreadsapi", "psapi", "handleapi",
    "winnt", "ws2def",
] }
